# PID_vs_RL

./: Readme.md  env.py  evaluate.py  inject_ppo_reference.py  main.py  metrics.py  plots.py  presentation.md  pyproject.toml  test dependencies.py  train.py
controllers/: basal_bolus.py
rapport/: main.tex
results/: results.csv
