[project]
name = "rl-vs-pid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=0.29.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "setuptools<71",
    "simglucose>=0.2.11",
    "stable-baselines3>=2.8.0",
]
